win32ss/dwm/milcore/include/Generated/wgx_commands.h

typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Offset;
    HMIL_RESOURCE hOffsetAnimations;
    UINT32 DashesSize;
} MILCMD_DASHSTYLE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Thickness;
    DOUBLE MiterLimit;
    HMIL_RESOURCE hBrush;
    HMIL_RESOURCE hThicknessAnimations;
    MilPenCap::Enum StartLineCap;
    MilPenCap::Enum EndLineCap;
    MilPenCap::Enum DashCap;
    MilPenJoin::Enum LineJoin;
    HMIL_RESOURCE hDashStyle;
} MILCMD_PEN;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hBrush;
    HMIL_RESOURCE hPen;
    HMIL_RESOURCE hGeometry;
} MILCMD_GEOMETRYDRAWING;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hGlyphRun;
    HMIL_RESOURCE hForegroundBrush;
} MILCMD_GLYPHRUNDRAWING;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilPointAndSizeD Rect;
    HMIL_RESOURCE hImageSource;
    HMIL_RESOURCE hRectAnimations;
} MILCMD_IMAGEDRAWING;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilPointAndSizeD Rect;
    HMIL_RESOURCE hPlayer;
    HMIL_RESOURCE hRectAnimations;
} MILCMD_VIDEODRAWING;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Opacity;
    UINT32 ChildrenSize;
    HMIL_RESOURCE hClipGeometry;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hOpacityMask;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hGuidelineSet;
    MilEdgeMode::Enum EdgeMode;
    MilBitmapScalingMode::Enum bitmapScalingMode;
    MilClearTypeHint::Enum ClearTypeHint;
} MILCMD_DRAWINGGROUP;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT32 GuidelinesXSize;
    UINT32 GuidelinesYSize;
    BOOL IsDynamic;
} MILCMD_GUIDELINESET;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE RenderAtScale;
    HMIL_RESOURCE hRenderAtScaleAnimations;
    BOOL SnapsToDevicePixels;
    BOOL EnableClearType;
} MILCMD_BITMAPCACHE;