win32ss/dwm/milcore/include/Generated/wgx_commands.cs

        [FieldOffset(28)] internal DUCE.ResourceHandle hBitmapCache;
        [FieldOffset(32)] internal DUCE.ResourceHandle hInternalTarget;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DASHSTYLE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Offset;
        [FieldOffset(16)] internal DUCE.ResourceHandle hOffsetAnimations;
        [FieldOffset(20)] internal UInt32 DashesSize;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_PEN
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Thickness;
        [FieldOffset(16)] internal double MiterLimit;
        [FieldOffset(24)] internal DUCE.ResourceHandle hBrush;
        [FieldOffset(28)] internal DUCE.ResourceHandle hThicknessAnimations;
        [FieldOffset(32)] internal PenLineCap StartLineCap;
        [FieldOffset(36)] internal PenLineCap EndLineCap;
        [FieldOffset(40)] internal PenLineCap DashCap;
        [FieldOffset(44)] internal PenLineJoin LineJoin;
        [FieldOffset(48)] internal DUCE.ResourceHandle hDashStyle;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_GEOMETRYDRAWING
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hBrush;
        [FieldOffset(12)] internal DUCE.ResourceHandle hPen;
        [FieldOffset(16)] internal DUCE.ResourceHandle hGeometry;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_GLYPHRUNDRAWING
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hGlyphRun;
        [FieldOffset(12)] internal DUCE.ResourceHandle hForegroundBrush;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_IMAGEDRAWING
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal Rect Rect;
        [FieldOffset(40)] internal DUCE.ResourceHandle hImageSource;
        [FieldOffset(44)] internal DUCE.ResourceHandle hRectAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VIDEODRAWING
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal Rect Rect;
        [FieldOffset(40)] internal DUCE.ResourceHandle hPlayer;
        [FieldOffset(44)] internal DUCE.ResourceHandle hRectAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DRAWINGGROUP
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Opacity;
        [FieldOffset(16)] internal UInt32 ChildrenSize;
        [FieldOffset(20)] internal DUCE.ResourceHandle hClipGeometry;
        [FieldOffset(24)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(28)] internal DUCE.ResourceHandle hOpacityMask;
        [FieldOffset(32)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(36)] internal DUCE.ResourceHandle hGuidelineSet;
        [FieldOffset(40)] internal EdgeMode EdgeMode;
        [FieldOffset(44)] internal BitmapScalingMode bitmapScalingMode;
        [FieldOffset(48)] internal ClearTypeHint ClearTypeHint;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_GUIDELINESET
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt32 GuidelinesXSize;
        [FieldOffset(12)] internal UInt32 GuidelinesYSize;
        [FieldOffset(16)] internal BOOL IsDynamic;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_BITMAPCACHE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double RenderAtScale;
        [FieldOffset(16)] internal DUCE.ResourceHandle hRenderAtScaleAnimations;
        [FieldOffset(20)] internal BOOL SnapsToDevicePixels;
        [FieldOffset(24)] internal BOOL EnableClearType;
        };
    };
}


